# Copyright 2023 Salesforce, Inc. All rights reserved.
[package]
name = "first_custom_policy_flex"
version = "1.0.0"
rust-version = "1.87.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[package.metadata.anypoint]
group_id = "c6f0feae-24c1-410d-ab52-718276f179b2"
definition_asset_id = "first-custom-policy-flex"
implementation_asset_id = "first-custom-policy-flex-flex"

[dependencies]
pdk = { version = "1.6.0" }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }
anyhow = "1.0"

[dev-dependencies]
pdk-test = { version = "1.6.0" }
httpmock = "0.6"
reqwest = "0.11"

[lib]
crate-type = ["cdylib"]

[profile.release]
lto = true
opt-level = 'z'
strip = "debuginfo"
